--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/test2?characterEncoding=utf-8&useSSL=false
     username: root
     password: jsbbsj
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -10,3 +10,7 @@ spring:
     password: guest
     username: guest
     addresses: 127.0.0.1
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+  mapper-locations: classpath:mappers/*.xml
